minor updates: menu background images drjart and misc changed from png to smaller jpgs for faster load speed; cursor pointer on gaming images on mobile, removed no longer used css classnames in main App.css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,9 +58,3 @@ body * {
   width: 100%;
   -webkit-overflow-scrolling: touch;
 }
-.no_select {
-  user-select: none;
-}
-.spacing_bottom {
-  margin-bottom: 16px;
-}
